# cipherline

./: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_LOG.md  LICENSE  PLAN.md  README.md
.github/workflows/: auto-version.yml  ci.yml  release.yml  version-bump.yml
common/: Cargo.toml
common/src/: crypto.rs  identity.rs  lib.rs  protocol.rs  ratchet.rs  types.rs
common/tests/: proptest_fuzz.rs
docs/: ANDROID.md  ANDROID_SETUP.md  ARCHITECTURE.md  IOS_SETUP.md  RELAY.md  SECURITY.md  USAGE.md
relay/: Cargo.toml
relay/src/: auth.rs  config.rs  main.rs  queue.rs  state.rs  ws.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  keystore.rs  lib.rs  main.rs  state.rs  store.rs  ws_client.rs
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
ui/src/: App.tsx  api.ts  notifications.ts  styles.css
ui/src/components/: ChatView.tsx  SettingsModal.tsx  SetupScreen.tsx  Sidebar.tsx
