[workspace]
members = ["common", "relay", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
zeroize = { version = "1.8", features = ["derive"] }
