[package]
name = "cipherline-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared cryptography, protocol, and types for CipherLine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }

# Cryptography (RustCrypto - pure Rust)
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
chacha20poly1305 = "0.10"
blake2 = "0.10"
subtle = "2.6"
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
proptest = "1"
